

apply plugin: 'eclipse-wtp'

eclipse {
	wtp {
		facet {
			// facets = facets
			facet name:'jst.utility', version:'1.0'
			facet name:'java', version: '1.7'
		}
	}
}

allprojects {
    repositories {
        maven {
            url "https://repository.jboss.org/maven2"
        }
    }

    ext {
        jdkLevel = 1.7
        encoding = 'ISO-8859-1'
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'iso-8859-1'
    }

    tasks.withType(Test) {
        systemProperty "file.encoding", "iso-8859-1"
    }    
    
    apply plugin: "java"
    
    sourceCompatibility = 1.7
    targetCompatibility = 1.7

    apply plugin: "jacoco"

    sourceSets {
        test.compileClasspath += configurations.compileOnly
        test.runtimeClasspath += configurations.compileOnly
    }

    jacoco {
        toolVersion = "0.7.9"
        reportsDir = file("$buildDir/test-results/jacoco")

        jacocoTestReport {
            reports {
                xml.enabled false
                csv.enabled false
                html.destination file("${buildDir}/test-results/jacoco/html")
            }
        }
    }

    test {
      
        jvmArgs '-XX:MaxPermSize=1024m'
        maxParallelForks = Runtime.runtime.availableProcessors()
    }
}



project.ext["org.apache.commons"] = [
	'org.apache.commons:commons-pool2:2.4.2',
	'commons-io:commons-io:2.4',
	'commons-lang:commons-lang:2.6',
	'commons-validator:commons-validator:1.4.0',
	'commons-beanutils:commons-beanutils:1.8.0',
	'commons-httpclient:commons-httpclient:3.0.1'
]
project.ext["org.apache.log4j"] = [
	'log4j:log4j:1.2.14'
]

project.ext["com.googlecode"] =	[
	'com.googlecode.json-simple:json-simple:1.1.1',
	'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
]

project.ext["com.google"] = [
	'com.google.protobuf:protobuf-java:2.5.0',
	'com.google.guava:guava:15.0',
	'com.google.code.gson:gson:2.3.1'
]

project.ext["org.jboss"] = [
	'org.jboss.jbossas:jboss-as-server:5.1.0.GA',
	'org.jboss.spec.javax.servlet.jsp:jboss-jsp-api_2.2_spec:1.0.2.Final'
]


project.ext["org.drools"] = [
	'org.drools:drools-core:6.3.0.Final',
	'org.drools:drools-decisiontables:6.3.0.Final',
	'org.drools:drools-compiler:6.3.0.Final',
	'org.kie:kie-ci:6.3.0.Final',
	'org.kie:kie-api:6.3.0.Final',
	'org.kie:kie-internal:6.3.0.Final'
]



project.ext["unit"] = [
	'junit:junit:4.12',
	'org.mockito:mockito-all:1.10.19',
	'org.powermock:powermock-mockito-release-full:1.6.3:full'
]

project.ext["org.springframework"] = [
	'org.springframework:spring-web:4.3.25.RELEASE'
]

apply plugin: 'maven-publish'

eclipse {
	wtp {
		facet {
			// facets = facets
			facet name:'jst.ejb', version:'3.0'
			facet name:'java', version: '1.7'
		}
	}
}

configurations.all {
    resolutionStrategy {
        cacheChangingModulesFor 0, "seconds"
    }
}



dependencies {
	compileOnly 'javax.ejb:ejb-api:3.0'	
    compileOnly 'javax:javaee-api:7.0'
    compileOnly project.ext["org.apache.commons"]  
    implementation 'com.sun.jersey:jersey-client:1.9' 
   
    
    compileOnly project.ext["org.drools"]
    compileOnly project.ext["org.apache.log4j"]
    testCompile project.ext["unit"]  
    testCompile project.ext["org.apache.log4j"]  
    testCompile project.ext["org.apache.commons"]  
    testCompile project.ext["org.drools"] 
    
}

sourceSets.main.resources.srcDirs = [ 'src/main/resources', 'src/main/rules','src/main/test']
sourceSets.test.java.srcDirs = [ 'src/main/test', 'test' ]
sourceSets.test.resources.srcDirs = [ 'src/test/resources', 'src/main/rules' ]
publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.arus.usuario'
            artifactId = 'ArusADNEJB'
            version = '1.0'
            from components.java
        }
    }
    repositories {
        
        mavenLocal()
        mavenCentral()
	    
   
	 

	}
}

		
